[gd_scene load_steps=12 format=3 uid="uid://d3naq81glx47c"]

[ext_resource type="Script" path="res://codes/carnide.gd" id="1_bcyph"]
[ext_resource type="Texture2D" uid="uid://dvdg5vvj8axhd" path="res://src/images/Pixel.png" id="2_eoy4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjb8c"]
size = Vector2(16.2683, 16.0181)

[sub_resource type="CircleShape2D" id="CircleShape2D_o6kch"]
radius = 353.524

[sub_resource type="CircleShape2D" id="CircleShape2D_rtoql"]
radius = 81.8126

[sub_resource type="Animation" id="Animation_swiw0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.737255, 0.498039, 0.615686, 1)]
}

[sub_resource type="Animation" id="Animation_rttyi"]
resource_name = "death"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.737255, 0.498039, 0.615686, 1), Color(0.899685, 0.77338, 0.831103, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oupwm"]
_data = {
"RESET": SubResource("Animation_swiw0"),
"death": SubResource("Animation_rttyi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig4rv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_261fp"]
size = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_3eqgq"]
radius = 160.012

[node name="Carnide" type="CharacterBody2D"]
script = ExtResource("1_bcyph")

[node name="Skin" type="Sprite2D" parent="."]
modulate = Color(0.737255, 0.498039, 0.615686, 1)
position = Vector2(8.50447, 6)
scale = Vector2(16, 16)
texture = ExtResource("2_eoy4b")

[node name="Hover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hover"]
light_mask = 0
visibility_layer = 0
position = Vector2(8.44034, 6.1315)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_pjb8c")

[node name="Info" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 8.63191
offset_top = -38.8862
offset_right = 136.631
offset_bottom = 87.114

[node name="Rectangle" type="Sprite2D" parent="Info"]
modulate = Color(1, 1, 1, 0.278431)
position = Vector2(60.4118, -61.8696)
scale = Vector2(128, 128)
texture = ExtResource("2_eoy4b")

[node name="Control" type="Control" parent="Info"]
anchors_preset = 0
offset_left = -3.0
offset_top = -126.0
offset_right = 125.0
offset_bottom = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="Info/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpecieContainer" type="HBoxContainer" parent="Info/Control/VBoxContainer"]
layout_mode = 2

[node name="Specie" type="Label" parent="Info/Control/VBoxContainer/SpecieContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Specie:"

[node name="SpecieFill" type="Label" parent="Info/Control/VBoxContainer/SpecieContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ADD HERE"

[node name="DietaContainer" type="HBoxContainer" parent="Info/Control/VBoxContainer"]
layout_mode = 2

[node name="Dieta" type="Label" parent="Info/Control/VBoxContainer/DietaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Dieta:"

[node name="DietaFill" type="Label" parent="Info/Control/VBoxContainer/DietaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ADD HERE"

[node name="EtaContainer" type="HBoxContainer" parent="Info/Control/VBoxContainer"]
layout_mode = 2

[node name="Eta" type="Label" parent="Info/Control/VBoxContainer/EtaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Et√†:"

[node name="EtaFill" type="Label" parent="Info/Control/VBoxContainer/EtaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ADD HERE"

[node name="FameContainer" type="HBoxContainer" parent="Info/Control/VBoxContainer"]
layout_mode = 2

[node name="Fame" type="Label" parent="Info/Control/VBoxContainer/FameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Fame:"

[node name="FameFill" type="Label" parent="Info/Control/VBoxContainer/FameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ADD HERE"

[node name="VitaContainer" type="HBoxContainer" parent="Info/Control/VBoxContainer"]
layout_mode = 2

[node name="HP" type="Label" parent="Info/Control/VBoxContainer/VitaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "HP:"

[node name="HPFill" type="Label" parent="Info/Control/VBoxContainer/VitaContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ADD HERE"

[node name="GenderContainer" type="HBoxContainer" parent="Info/Control/VBoxContainer"]
layout_mode = 2

[node name="Gender" type="Label" parent="Info/Control/VBoxContainer/GenderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Genere:"

[node name="GenderFill" type="Label" parent="Info/Control/VBoxContainer/GenderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ADD HERE"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8.63193, 5.97987)
shape = SubResource("CircleShape2D_o6kch")

[node name="EatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatArea"]
position = Vector2(8.63193, 5.97987)
shape = SubResource("CircleShape2D_rtoql")
debug_color = Color(0.805798, 0.00234493, 0.994998, 0.42)

[node name="Cooldown" type="Timer" parent="EatArea"]

[node name="MoveStatus" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oupwm")
}

[node name="BirthCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InHeat" type="Timer" parent="."]
wait_time = 8.0

[node name="SecsShape" type="CollisionShape2D" parent="."]
position = Vector2(8.63193, 5.97987)
shape = SubResource("RectangleShape2D_ig4rv")
disabled = true

[node name="CarnideEater" type="CollisionShape2D" parent="."]
position = Vector2(8, 6)
shape = SubResource("RectangleShape2D_261fp")

[node name="ErbiDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ErbiDetect"]
position = Vector2(8, 6)
shape = SubResource("CircleShape2D_3eqgq")
debug_color = Color(0.292053, 0.62956, 0, 0.42)

[node name="Agguato" type="Timer" parent="ErbiDetect"]
wait_time = 2.0
one_shot = true

[connection signal="mouse_entered" from="Hover" to="." method="_on_hover_mouse_entered"]
[connection signal="mouse_exited" from="Hover" to="." method="_on_hover_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="EatArea" to="." method="_on_eat_area_body_entered"]
[connection signal="timeout" from="EatArea/Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="MoveStatus" to="." method="_on_move_status_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="BirthCooldown" to="." method="_on_birth_cooldown_timeout"]
[connection signal="timeout" from="InHeat" to="." method="_on_in_heat_timeout"]
[connection signal="body_entered" from="ErbiDetect" to="." method="_on_erbi_detect_body_entered"]
[connection signal="body_exited" from="ErbiDetect" to="." method="_on_erbi_detect_body_exited"]
[connection signal="timeout" from="ErbiDetect/Agguato" to="." method="_on_agguato_timeout"]
